2006-07-15  Neil Williams <linux@codehelp.co.uk>

	* qof/qofevent.h : new QOF_EVENT_COMMIT event to 
	use alongside QOF_EVENT_MODIFY to handle before 
	and after edit undo operations.
	* qof/qoflog.c : adding undo the default log modules.
	* qof/qofundo-p.h
	 qof/qofundo.c
	 qof/qofundo.h : Adding public functions to mark
	 entity changes for undo operations.

2006-07-14  Neil Williams <linux@codehelp.co.uk>

	* backend/file/qsf-object.xsd.xml : Add time 
	type to the qsf schema.

	* qof/qofinstance.c : Set a valid time when creating
	a new instance.
	* qof/qoftime.c : Upgrade qof_time_from_tm to
	not use GDate.
	* qof/qofdate.h :
	* qof/qofdate.c : Change prototype of 
	qof_date_format_add to return the first available
	identifier, not assume the user knows this value in
	advance.
	* qof/test/test-date.c : Use new qof_date_format_add
	prototype.
	* po/en_GB.po : Added new strings for date to time
	transition handling option.

2006-07-13  Neil Williams <linux@codehelp.co.uk>

	* qof/qofdate.c : Fix date normalising.
	* qof/qofdate.h : Expand QofDate so that
	non-calculated values can be used to manipulate
	the QofDate within a wider range - glong.
	* qof/qofstrptime.c : Expand year recognition to
	nine significant digits, allowing parsing of years
	upto 999,999,999AD.
	* qof/test/test-date.c : New tests.

2006-07-12  Neil Williams <linux@codehelp.co.uk>

	* qof/qofdate.c : Adding back QOF_DATE_FORMAT_ISO8601
	* qof/qofdate.h : Adding back QOF_DATE_FORMAT_ISO8601
	* qof/qofstrftime.c : Supporting nanoseconds.
	* qof/qofstrptime.c : Supporting nanoseconds.
	* qof/qoftime.c : Correcting nanosecond handling.
	* qof/test/test-date.c : Adding nanosecond tests.
	* qof/test/.cvsignore : Ignore debug file.
	(only created in CVS builds).

2006-07-11  Neil Williams <linux@codehelp.co.uk>

	* HACKING : Update for QOF_TYPE_DATE changes.
	* README :  Update for QOF_TYPE_DATE changes.
	* debian/changelog : Update for QOF_TYPE_DATE 
	changes.