@@ -547,5 +547,5 @@ main (int argc, const char *argv[])
 	test_merge ();
 	print_test_results ();
 	qof_close ();
-	return 0;
+	return get_rv();
 }
