@@ -896,7 +896,7 @@ main (int argc, char **argv)
 	print_test_results ();
 	exit (get_rv ());
 	qof_close ();
-	return 0;
+	return get_rv();
 }
 
 /* ======================== END OF FILE ====================== */
